@@ -35,7 +35,7 @@
 
 #define GTK_EXPANDER_GET_PRIVATE(o) (G_TYPE_INSTANCE_GET_PRIVATE ((o), GTK_TYPE_EXPANDER, GtkExpanderPrivate))
 
-#define DEFAULT_EXPANDER_SIZE 10
+#define DEFAULT_EXPANDER_SIZE 12
 #define DEFAULT_EXPANDER_SPACING 2
 
 enum
